--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ a {
 #star-container {
   display: flex;
   flex-wrap: nowrap;
-  background-color: blue;
+  background-color: black;
   margin-left: auto;
   margin-right: auto;
   width: 40%;
@@ -27,9 +27,10 @@ background-color: lightblue;
   flex: 20%;
 background-color: navy;
 color: gold;
+border: 1rem;
 }
 .star-rated {
-  background-color: red;
+  background-color: gold;
 }
 #comment {
   margin-left: auto;
